# HybridRAG

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  PYTHON_ENVIRONMENTS.md  README.md  SERVICE_README.md  STORAGE_GUIDE.md  USAGE.md  activate_py310.sh  activate_system.sh  app.py  batch_process.py  benchmark_summary_20251006_071606.csv  benchmark_vector_db.py  check_documents.py  cli.py  comprehensive_benchmark_20251004_130226.json  comprehensive_rag_benchmark_20251006_071606.json  config.py  docker-compose.yml  doclingagent.service  document_processor.py  enhanced_document_processor.py  fastapi_app.py  gpu_comparison_benchmark_20251004_131152.json  gpu_comparison_benchmark_20251004_131435.json  hybrid_rag.py  knowledge_graph.py  llm_client.py  monitor_performance.py  pyproject.toml  quick_benchmark.py  requirements.txt  requirements_py310.txt  reranker.py  reset_system.py  (+11 more)
.github/workflows/: ci.yml
templates/: chat.html
